# rust-diesel-fail-example

./: .env  Cargo.toml  README.md
migrations/2021-02-25-100821_mydb/: up.sql
src/: main.rs  schema.rs
