[package]
name = "foo"
version = "0.1.0"
authors = ["Esteban Gutierrez <esguti@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
lazy_static = "1.4"
diesel_migrations = { version = "1.4", features = ["postgres"] }
serde = {version = "1.0", features = ["derive"] }
r2d2 = "0.8"